Fixed spacing. Fixed description box glitch. Need to fix chevron

--- a/src/components/InventoryEdit/InventoryEdit.scss
+++ b/src/components/InventoryEdit/InventoryEdit.scss
@@ -34,6 +34,11 @@
     vertical-align: top;
     color: $color-slate;
     padding-top:1rem;
+    // max-width: 40.325rem;
+
+    @include tablet {
+        // width: ;
+    }
   }
 
 .link {
