--- a/src/components/WarehouseEdit/WarehouseEdit.scss
+++ b/src/components/WarehouseEdit/WarehouseEdit.scss
@@ -21,6 +21,7 @@ body {
         background-color: $color-white;
         border-radius: .25rem;
         box-shadow: 0px 2px 5px 0px #13182C1A;
+        z-index: 1;
         position: relative;
     }
 
@@ -81,7 +82,7 @@ body {
     &__questions {
         @include flexbox;
         flex-direction: column;
-        margin: 0 1.5rem 1rem 1.5rem;
+        margin: 0 1.5rem 1.5rem 1.5rem;
     }
 
     &__label {
@@ -98,6 +99,11 @@ body {
         @include form-mobile-default;
         padding-left: 1rem;
         padding-right: 1rem;
+        min-width: 18.0938rem;
+
+        @include tablet {
+            max-width: 32.9844rem;
+        }
         
         &:active {
             @include form-mobile-active;
